--- a/src/sass/_setting/_variables.scss
+++ b/src/sass/_setting/_variables.scss
@@ -12,6 +12,7 @@ $color-blue: #A0DDCC;
 $color-white: #ffffff;
 $color-gray: #F7F7F7;
 $color-cream: #FFFFE3;
+$color-disabled: #C1C1C1;
 
 $body-family: "HiraKakuPro-W3", "Hiragino Kaku Gothic ProN",
     "ヒラギノ角ゴ ProN W3", YuGothic, "游ゴシック", "メイリオ", "Meiryo",
