トップページ修正（更新履歴まで）

--- a/src/sass/_setting/_variables.scss
+++ b/src/sass/_setting/_variables.scss
@@ -11,6 +11,7 @@ $color-green: #98BF29;
 $color-blue: #A0DDCC;
 $color-white: #ffffff;
 $color-gray: #F7F7F7;
+$color-dark-gray: #474645;
 $color-cream: #FFFFE3;
 $color-disabled: #C1C1C1;
 
