--- a/src/sass/_structure/_global.scss
+++ b/src/sass/_structure/_global.scss
@@ -9,7 +9,6 @@
   body {
     width: 100%;
     height: 100%;
-    min-width: $content-layout-sp-width;
     font-size: 100%;
     color: $font-color;
   }
@@ -21,6 +20,10 @@
   a, a:hover {
     color: $font-color;
     text-decoration: none;
+  }
+
+  iframe {
+    max-width: 100%;
   }
   
   .is_notTouchDevice a:hover {
