--- a/dest/css/index.css
+++ b/dest/css/index.css
@@ -1,7 +1,22 @@
 @media all {
+  .headBase, .top-section03 h3, .top-section03 .top-sec03-result, .top-section04 .top-sec04-result {
+    width: 90%;
+    background-color: #FFFFE3;
+    border: 5px solid #EF8971;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    color: #EF8971;
+    padding: .5em 0 .25em;
+    margin: 0 auto;
+  }
+  .main .box-inner {
+    padding: 20px;
+  }
   .top-section01 {
     background-color: #FFFFE3;
-    padding: 2rem 1rem;
   }
   .top-section01 h2 img.pc-none {
     width: 55%;
@@ -21,10 +36,10 @@
     margin-bottom: 30px;
   }
   .top-section01 .form-control-radio:first-of-type {
-    width: 65%;
+    width: 70%;
   }
   .top-section01 .form-control-radio:last-of-type {
-    width: 35%;
+    width: 30%;
   }
   .top-section01 .form-control-text input {
     width: 80%;
@@ -37,10 +52,10 @@
   .top-section01 .form-control-button button {
     box-shadow: 1px 2px 4px gray;
   }
-  .top-section02 {
-    background-color: #F7F7F7;
+  .top-section02-image .box-inner {
+    padding: 0;
   }
-  .top-section02 h3 {
+  .top-section02-image h3 {
     width: 100%;
     height: 280px;
     background-image: url(/images/top/sec02-bg-sp.png);
@@ -51,7 +66,7 @@
     font-size: 1.25rem;
     position: relative;
   }
-  .top-section02 h3 span {
+  .top-section02-image h3 span {
     left: 0;
     bottom: 0;
     width: 100%;
@@ -62,17 +77,16 @@
     display: block;
     z-index: 10;
   }
-  .top-section02 .top-sec02-text-left {
-    padding: 20px;
+  .top-section02 {
+    background-color: #F7F7F7;
   }
-  .top-section02 .top-sec02-text-left h4 {
+  .top-section02 .top-sec02-text-left h3 {
     font-size: 22px;
     font-size: 1.375rem;
     text-indent: 1em;
     margin-bottom: .5em;
   }
   .top-section02 .top-sec02-text-right {
-    width: 370px;
     margin: 0 auto;
     text-align: center;
   }
@@ -96,10 +110,7 @@
     padding: 20px 0 30px;
   }
   .top-section02 .top-sec02-character img {
-    max-height: 167px;
-  }
-  .top-section03 .box-inner {
-    padding: 30px 10px;
+    width: 54%;
   }
   .top-section03 h3, .top-section03 .top-sec03-result {
     width: 88%;
@@ -107,12 +118,9 @@
     border: 5px solid #EF8971;
     border-radius: 20px;
     text-align: center;
-    font-size: 22px;
-    font-size: 1.375rem;
-    line-height: 1;
     color: #EF8971;
     padding: .5em 0 .25em;
-    margin: 0 auto;
+    margin: 30px auto 20px;
   }
   .top-section03 .top-sec03-specialties {
     margin: 1em 0;
@@ -162,11 +170,79 @@
     color: #ffffff;
     background-color: #EF8971;
     padding: 20px 0;
+    margin: 0 auto;
     line-height: 1.36364;
   }
+  .top-section04 {
+    background-color: #FFFFE3;
+    text-align: center;
+  }
+  .top-section04 h3 {
+    color: #EF8971;
+    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    margin: 20px 0 0;
+  }
+  .top-section04 img {
+    width: 200px;
+    margin-top: 50px;
+  }
+  .top-section04 h4 {
+    font-size: 20px;
+    font-size: 1.25rem;
+    line-height: 1.3;
+    margin: 20px 0;
+  }
+  .top-section04 p {
+    text-align: left;
+    line-height: 1.5;
+  }
+  .top-section04 .top-sec04-result {
+    width: 100%;
+    background-color: #ffffff;
+    padding: 8px 0;
+    margin: 40px 0 30px;
+  }
+  .top-section05 {
+    border-top: 1px solid #EF8971;
+  }
+  .top-section05 .box-inner {
+    padding: 0 20px 20px;
+  }
+  .top-section05 h3 {
+    margin: 0 0 20px;
+    text-align: center;
+  }
+  .top-section05 h3 span {
+    background-color: #EF8971;
+    color: #ffffff;
+    font-size: 16px;
+    font-size: 1rem;
+    padding: 4px 8px;
+    display: inline-block;
+  }
+  .top-section05 ul {
+    padding: 0 10px;
+  }
+  .top-section05 ul li {
+    margin: 0 0 .75em;
+    display: table;
+  }
+  .top-section05 ul li span, .top-section05 ul li p {
+    display: table-cell;
+    vertical-align: top;
+  }
+  .top-section05 ul li span {
+    width: 6em;
+    margin-right: .5em;
+  }
+  .top-section05 ul li:nth-child(even) {
+    color: #BCBCBC;
+  }
 }@media all and (min-width: 769px) {
-  .top-section01 {
-    padding: 1.25rem 0 2rem;
+  .main .box-inner {
+    padding: 20px 0;
   }
   .top-section01 h2 img.sp-none {
     height: 59px;
@@ -225,15 +301,18 @@
     padding: .5em 0;
     margin: 0 auto;
   }
-  .top-section02 {
+  .top-section02-image {
     padding: 0;
   }
-  .top-section02 h3 {
+  .top-section02-image .box-inner {
+    padding: 0;
+  }
+  .top-section02-image h3 {
     width: 100%;
     height: 300px;
     background-image: url(/images/top/sec02-bg.png);
   }
-  .top-section02 h3 span {
+  .top-section02-image h3 span {
     font-size: 28px;
     font-size: 1.75rem;
   }
@@ -250,26 +329,32 @@
     font-size: 0.9375rem;
     padding-bottom: 40px;
   }
-  .top-section02 .top-sec02-text-left h4 {
+  .top-section02 .top-sec02-text-left h3 {
     font-size: 28px;
     font-size: 1.75rem;
     text-indent: 0;
   }
   .top-section02 .top-sec02-text-right {
+    width: 370px;
     margin: 0 0 0 auto;
   }
   .top-section02 .top-sec02-character {
-    left: 400px;
+    left: 410px;
     bottom: 0;
     width: auto;
     display: inline-block;
     position: absolute;
     z-index: 10;
   }
+  .top-section02 .top-sec02-character img {
+    width: 210px;
+  }
   .top-section03 h3 {
     width: 100%;
     font-size: 28px;
     font-size: 1.75rem;
+    padding: 4px 0;
+    margin: 20px 0;
   }
   .top-section03 .top-sec03-specialties p {
     font-size: 22px;
@@ -299,8 +384,51 @@
     clear: both;
   }
   .top-section03 .top-sec03-specialties .top-sec03-result {
+    width: 100%;
     text-align: center;
     padding: 6px 0;
+  }
+  .top-section04 h3 {
+    font-size: 28px;
+    font-size: 1.75rem;
+  }
+  .top-section04 .box-inner div {
+    width: 30%;
+    padding: 0 0 50px;
+    display: block;
+    float: left;
+  }
+  .top-section04 .box-inner div.top-sec04-service02 {
+    margin: 0 5%;
+  }
+  .top-section04 .box-inner div.top-sec04-service03::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  .top-section04 .box-inner div h4 {
+    color: #474645;
+    font-size: 18px;
+    font-size: 1.125rem;
+    line-height: 1.44444;
+    margin: 30px 0;
+  }
+  .top-section04 .top-sec04-result {
+    clear: both;
+  }
+  .top-section05 .box-inner {
+    padding: 0 20px 20px;
+  }
+  .top-section05 ul {
+    padding: 0;
+  }
+  .top-section05 h3 {
+    text-align: left;
+  }
+  .top-section05 h3 span {
+    font-size: 20px;
+    font-size: 1.25rem;
+    padding: 4px 40px;
   }
 }@media all and (max-width: 360px) {
   .top-section01 h2 img.pc-none {
