--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -133,7 +133,6 @@ header
   body {
     width: 100%;
     height: 100%;
-    min-width: 320px;
     font-size: 100%;
     color: #707070;
   }
@@ -143,6 +142,9 @@ header
   a, a:hover {
     color: #707070;
     text-decoration: none;
+  }
+  iframe {
+    max-width: 100%;
   }
   .is_notTouchDevice a:hover {
     opacity: .8;
@@ -157,7 +159,6 @@ header
     position: relative;
   }
   .box-wrapper .box-inner {
-    min-width: 320px;
     margin: 0 auto;
   }
   .header::after, .main::after, .footer::after, .box-wrapper::after {
