--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,6 +17,7 @@
 // compornent
 // -----------------------------------
 @import "_component/_form";
+@import "_component/_title";
 /*
 @import "_compornent/_link";
 @import "_compornent/_title";
