--- a/src/sass/_structure/_global.scss
+++ b/src/sass/_structure/_global.scss
@@ -12,6 +12,7 @@
     min-width: $content-layout-sp-width;
     font-size: 100%;
     color: $font-color;
+    font-family: $body-family;
   }
 
   img {
