--- a/src/sass/diagnosis.scss
+++ b/src/sass/diagnosis.scss
@@ -225,6 +225,7 @@
          } 
         }
         .regist-button{
+          margin: 0;
           flex-basis: 302px;
           text-align: right;
           img{
