--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -138,6 +138,7 @@ header
     min-width: 320px;
     font-size: 100%;
     color: #707070;
+    font-family: "HiraKakuPro-W3", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", YuGothic, "游ゴシック", "メイリオ", "Meiryo", "Meiryo UI", "ＭＳ Ｐゴシック", sans-serif;
   }
   img {
     vertical-align: middle;
