--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -456,9 +456,15 @@ header
     margin-top: 10px;
   }
   .title-with-border {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 28px;
     font-size: 1.75rem;
   }
