--- a/dest/css/index.css
+++ b/dest/css/index.css
@@ -1,8 +1,14 @@
 @media all {
   .title-with-border, .top-section06 h3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 28px;
     font-size: 1.75rem;
   }
@@ -489,7 +495,8 @@
     position: relative;
   }
   .top-section06 ul li:not(:last-of-type)::after {
-    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
     position: absolute;
     right: -48px;
     top: 114px;
