--- a/dest/css/style.css
+++ b/dest/css/style.css
@@ -49,11 +49,13 @@ textarea {
 }
 
 html {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 *, *::before, *::after {
-  box-sizing: inherit;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 img,
@@ -331,9 +333,15 @@ header
   }
   .form-field-content {
     height: calc(2.5rem + 2px);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .form-control {
     /* 入力系インプット */
@@ -370,7 +378,8 @@ header
     display: block;
     position: relative;
     padding-left: 2rem;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     cursor: pointer;
   }
   .form-control-radio input[type=radio], .form-control-radio input[type=checkbox] {
@@ -414,7 +423,8 @@ header
     padding: .75rem 0;
     position: relative;
     outline-color: #98BF29;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
   .is_notTouchDevice .form-control-button input[type=submit]:hover, .is_notTouchDevice .form-control-button input[type=submit]:focus, .is_notTouchDevice .form-control-button button:hover, .is_notTouchDevice .form-control-button button:focus {
     background-color: #EF8971;
@@ -445,9 +455,15 @@ header
     margin-top: 10px;
   }
   .title-with-border {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 28px;
     font-size: 1.75rem;
   }
