--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -44,11 +44,16 @@
         margin-bottom: 30px;
       }
     }
-    .form-control-radio:first-of-type {
-      width: 70%;
-    }
-    .form-control-radio:last-of-type {
-      width: 30%;
+    .form-control-radio {
+      input[type=number] {
+        width: 80px;
+      }
+      &:first-of-type {
+        width: 70%;
+      }
+      &:last-of-type {
+        width: 30%;
+      }
     }
     .form-control-text {
       input {
@@ -298,8 +303,6 @@
       }
     }
   }
-<<<<<<< Updated upstream
-=======
 
   // section07
   .top-section07 {
@@ -328,6 +331,7 @@
 
   // section08
   .top-section08 {
+    background-color: $color-gray;
     h3 {
       @extend .title-with-border;
       @include font-size(18);
@@ -336,18 +340,24 @@
         width: calc((100% - 12em) / 2);
       }
     }
+    h4 {
+      text-align: left;
+      img {
+        height: 40px;
+      }
+    }
     .top-sec08-ranking {
       width: 100%;
       max-width: 640px;
       border: 10px solid $color-blue;
       border-radius: 20px;
       text-align: center;
-      margin: 20px auto;
+      margin: 30px auto;
       padding: 10px;
       ul {
         li {
           width: 100%;
-          margin: 30px 0 0;
+          margin: 10px 0 20px;
         }
       }
     }
@@ -371,7 +381,6 @@
       display: inline-block;
     }
   }
->>>>>>> Stashed changes
 }
 
 @include desktop {
@@ -601,8 +610,6 @@
       }
     }
   }
-<<<<<<< Updated upstream
-=======
 
   // section07
   .top-section07 {
@@ -628,9 +635,16 @@
     .top-sec08-ranking {
       width: 40%;
       max-width: inherit;
-      margin: 20px 0;
+      margin: 40px 0;
       padding: 10px;
-      display: inline-flex;
+      display: table;
+      float: left;
+      &:first-of-type {
+        margin-right: 20%;
+      }
+      &:last-of-type::after {
+        @include clearfix;
+      }
       ul {
         li {
           width: 100%;
@@ -639,7 +653,6 @@
       }
     }
   }
->>>>>>> Stashed changes
 }
 
 @include sp {
@@ -647,7 +660,5 @@
     h2 img.pc-none {
       width: 80%;
     }
-  }
-  .top-section02 {
   }
 }
