--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -349,6 +349,7 @@
     .top-sec08-ranking {
       width: 100%;
       max-width: 640px;
+      background-color: $color-white;
       border: 10px solid $color-blue;
       border-radius: 20px;
       text-align: center;
@@ -636,7 +637,7 @@
       width: 45%;
       max-width: inherit;
       margin: 40px 0;
-      padding: 10px;
+      padding: 10px 20px;
       display: block;
       float: left;
       &:first-of-type {
