--- a/src/html/_layouts/modal.html
+++ b/src/html/_layouts/modal.html
@@ -8,7 +8,7 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="description" content="">
 <link href="./css/style.css" rel="stylesheet">
-{% if (page.css == 'true') %}<link href="./css/{{page.cssname}}.css" rel="stylesheet">{% endif %}
+{% if (page.css == 'true') %}<link href="./css/{{page.name}}.css" rel="stylesheet">{% endif %}
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 
