--- a/src/sass/_structure/_layout.scss
+++ b/src/sass/_structure/_layout.scss
@@ -11,6 +11,9 @@
       margin: 0 auto;
     }
   }
+  .main .box-inner {
+    padding: 10px 20px;
+  }
   .header::after, .main::after, .footer::after, .box-wrapper::after {
     @include clearfix;
   }
@@ -22,6 +25,9 @@
   }
   .box-inner {
     width: $content-layout-width;
+  }
+  .main .box-inner {
+    padding: 10px 0;
   }
 }
 
