[マイページ] 重要度チェック

--- a/src/html/_layouts/layout.html
+++ b/src/html/_layouts/layout.html
@@ -39,9 +39,9 @@
   </aside>
   <!-- / 診断ボタン -->
 
-  <script src="js/common.js"></script>
+  <script src="/js/common.js"></script>
   {% for js in page.js %}
-  <link href="/js/{{js}}.js" rel="stylesheet">
+  <script src="/js/{{js}}.js"></script>
   {% endfor %}
 </body>
 </html>
