--- a/src/sass/mypage.scss
+++ b/src/sass/mypage.scss
@@ -7,7 +7,11 @@
 @include touch {
   .main .box-inner {
     padding-bottom: 60px;
+    &.box-inner-no-padding {
+      padding: 0;
+    }
   }
+
   .mypage-status {
     ul {
       width: 100%;
@@ -18,11 +22,127 @@
       li {
         text-align: center;
         flex-basis: 50%;
+        @include font-size(14);
         padding: 2px 0;
         margin: 10px 0;
         &.current {
           color: $color-white;
           background-color: $color-pink;
+        }
+      }
+    }
+  }
+
+  .form-field-single {
+    text-align: center;
+    margin: 20px 0 0;
+    .form-control-button {
+      display: inline-block;
+      .button {
+        width: auto;
+        @include font-size(14);
+        padding: 8px 50px 8px 30px;
+        box-shadow: 0 1px 2px $color-dark-gray;
+      }
+    }
+  }
+
+  // 重要度チェック
+  .my-tl-section01 {
+    @include font-size(20);
+    .my-tl-box {
+      h3 {
+        width: 100%;
+        text-align: center;
+        padding: 4px 0;
+      }
+      &.my-tl-box1 {
+        margin-top: -40px;
+        h3 {
+          color: $color-white;
+          background-color: $color-green;
+          padding: 5px 1px;
+        }
+      }
+      &.my-tl-box2 {
+        margin: 20px 0 60px;
+        h3 {
+          color: $color-green;
+          border-top: 1px solid $color-green;
+          border-bottom: 1px solid $color-green;
+        }
+      }
+      ul {
+        li {
+          @include font-size(14);
+          padding: 14px 10px;
+          position: relative;
+          &:nth-child(even) {
+            background-color: $color-gray;
+          }
+          a {
+            display: flex;
+            &::after {
+              content: "\03e";
+              top: 50%;
+              right: 10px;
+              @include font-size(20);
+              font-weight: 600;
+              -webkit-transform: translate(0, -50%);
+              transform: translate(0, -50%);
+              display: inline-block;
+              position: absolute;
+            }
+            p {
+              margin: 0 0 0 1em;
+              align-self: center;
+            }
+            .label {
+              width: 2.3em;
+              height: 2.3em;
+              @include font-size(17);
+              position: relative;
+              &::before {
+                left: 50%;
+                -webkit-transform: translate(-50%);
+                transform: translate(-50%);
+                bottom: 0;
+                position: absolute;
+              }
+              span {
+                @include font-size(10);
+                padding: 2px 0 0;
+                text-align: center;
+                display: block;
+                &::before {
+                  content: "重要度";
+                }
+              }
+            }
+          }
+          .label-high {
+            color: $color-white;
+            background-color: $color-pink;
+            &::before {
+              content: "高";
+            }
+          }
+          .label-mid {
+            color: $color-pink;
+            background-color: $color-cream;
+            border: 1px solid $color-pink;
+            &::before {
+              content: "中";
+            }
+          }
+          .label-low {
+            color: $color-green;
+            background-color: $color-cream;
+            border: 1px solid $color-green;
+            &::before {
+              content: "小";
+            }
+          }
         }
       }
     }
@@ -35,6 +155,30 @@
       flex-wrap: nowrap;
       li {
         flex-basis: 25%;
+        @include font-size(18);
+      }
+    }
+  }
+
+  .form-field-single {
+    text-align: right;
+    margin: 0;
+  }
+
+  // 重要度チェック
+  .my-tl-section01 {
+    .box-inner-no-padding {
+      margin: -40px auto 60px;
+      display: flex;
+      justify-content: space-between;
+      .my-tl-box {
+        width: 47%;
+        margin: 0;
+        &.my-tl-box2 {
+          h3 {
+            border: 1px solid $color-green;
+          }
+        }
       }
     }
   }
