--- a/src/sass/_component/_form.scss
+++ b/src/sass/_component/_form.scss
@@ -151,6 +151,7 @@
         color: $color-green;
         background-color: $color-gray;
         outline-color: $color-gray;
+        box-shadow: 0 1px 2px $color-dark-gray;
         .is_notTouchDevice &:hover, .is_notTouchDevice &:focus {
           background-color: $color-cream;
           outline-color: $color-cream;
